manifests/activemq-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: queue
  labels:
    app : queue
spec:
  containers:
    - name: activemq
      image: richardchesterwood/k8s-fleetman-queue:release1
      ports:
        - containerPort: 8161
