manifests/mongo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongo
          image: mongo:3.6.5-jessie
          volumeMounts:
            - name: mongo-persistent-storage
              mountPath: /data/db
          resources:
            requests:
              memory: 500Mi
              cpu: 500m
      volumes:
        - name: mongo-persistent-storage
          # pointer to the configuration of how we want the mount to be implemented
          persistentVolumeClaim:
            claimName: mongo-pvc
