manifests/second-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-release-0-5
  labels:
    app : webapp
    release: 0-5
spec:
  containers:
    - name: webappp
      image: richardchesterwood/k8s-fleetman-webapp-angular:release0-5
