manifests/activemq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-queue
spec:
  type: NodePort
  selector:
    app: queue
  ports:
    - name: http
      nodePort: 30010
      port: 8161
    - name: endpoint
      port: 61616
