manifests/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
  type: ClusterIP
