manifests/position-tracker-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-position-tracker
spec:
  type: ClusterIP
  selector:
    app: position-tracker
  ports:
    - name: http
      port: 8080
