manifests/webapp-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleetman-webapp
spec:
  ports:
    # listens on port 30080 and routes traffic to app: webapp pods on port 80
    - name: http
      port: 80
      nodePort: 30080
  # Defines which pods are going to be represented by this service
  # Service becomes a network endpoint for either other services inside cluster
  # or for external users to connect to
  selector:
    app: webapp
  type: NodePort
